--- a/4-DOM-pig-game/starter/index.html
+++ b/4-DOM-pig-game/starter/index.html
@@ -30,6 +30,7 @@
             </div>
             
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
+            <input type="number" class="winning-score" id="winning-score">20</input>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             
